--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 			<img src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 		</div>
 		<div id="Searchbar">
-			<input type="" name="">
+		<form action="#" method="post" name="myform">
+			
+			<input type="text" name="Searchbar">
+
+		</form>
 		</div>
-		<div id="Buttons"></div>
+		<div id="Buttons">
+			
+        <button id="button1"></button>
+        <button id="button2"></button>
+
+		</div>
 	</body>
 </html>
