--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>
 			Google Home
 		</title>
+		<link rel="stylesheet" href="stylesheet.css">
 	</head>
 	<body>
 		<div id="Header">
@@ -11,7 +12,7 @@
 		<div id="Searchbar">
 		<form action="#" method="post" name="myform">
 			
-			<input type="text" name="Searchbar">
+			<input type="text" name="Searchbar" background-img>
 
 		</form>
 		</div>
