--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="Searchbar">
 		<form action="#" method="post" name="myform">
 			
-			<input type="text" name="Searchbar" background-img>
+			<input type="text" name="Searchbar" background-img=>
 
 		</form>
 		</div>
