--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<div id="Header">
 			<img src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 		</div>
-		<div id="Searchbar">
+		<div>
 		<form action="#" method="post" name="myform">
 			
-			<input type="text" name="Searchbar">
+			<input type="text" name="Searchbar" id="Searchbar">
 
 		</form>
 		</div>
