--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			<img src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
 		</div>
 		<div>
-		<form action="#" method="post" name="myform">
+		<form action="#" method="post" name="myform" id="Searchbar">
 			
-			<input type="text" name="Searchbar" id="Searchbar">
+			<input type="text" name="Searchbar">
 
 		</form>
 		</div>
