--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form method="GET">
       <center>
         <div id="logo">
-          <img src="img/googlelogo.png" alt="Google logo">
+          <img src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
         </div>
           <input type="search" name="googlesearch" title="Search" autofocus>
       </center>
