--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
       <li id="gmail"><a href="#">GMAIL</a></li>
       <li id="bilder"><a href"#">Bilder</li>
-      <li id="caro"><a href="#"><img src="https://ssl.gstatic.com/gb/images/i1_1967ca6a.png"></a></li>
+      <li id="caro"><a href="#"><img src="#" alt="Google Apps"></a></li>
       <li id="anmelden"><a href="#">Anmelden></a></li>
     </ul>
   </nav>
@@ -25,8 +25,8 @@
       </center>
       <div class="buttons">
         <center>
-          <button id="leftbutton" value="Search" type="button"></button>
-          <button id="rightbutton" value="Feeling Lucky" type="button"></button>
+          <button id="leftbutton" value="Search" type="button">Suchen</button>
+          <button id="rightbutton" value="Feeling Lucky" type="button">Feeling Lucky</button>
         </center>
       </div>
     </form>
