--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <nav>
     <ul>
       <li id="gmail"><a href="#">GMAIL</a></li>
-      <li id="bilder"><a href"#">Bilder</a></li>
-      <li id="caro"><a href="#"><img src="#" alt="Google Apps"></a></li>
-      <li id="anmelden"><a href="#">Anmelden></a></li>
+      <li id="bilder"><a href="#">Bilder</a></li>
+      <li id="caro"><a href="#">Google Apps</a></li>
+      <li id="anmelden"><a href="#">Anmelden</a></li>
     </ul>
   </nav>
   <div id="content">
